# libstun

./: .editorconfig  CMakeLists.txt  README.md
include/: stun.h  stun_common.h
include/stun_attr/: dont_fragment.h  even_port.h  requested_transport.h  reservation_token.h  xor_mapped_addr.h
src/: .clang-format  attributes.c  common.c  stun.c
test/: main.c
